[package]
name = "hash-game"
version = "0.1.0"
authors = ["Wojciech Meller <wojmel97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.18"
lazy_static = "1.4"
rand = "0.7"
structopt = "0.3"
structopt-toml = "0.4"
